--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,7 @@ rand = "*"
 url = "*"
 env_logger = "*"
 log = "*"
-#bullet = { git = "https://github.com/s3bk/bullet.git" }
-bullet = { path="../bullet" }
+bullet = { git = "https://github.com/s3bk/bullet.git" }
 bincode = "*"
 chrono = "*"
 unicode-segmentation = "*"
