--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ rand = "*"
 url = "*"
 env_logger = "*"
 log = "*"
-#bullet = { git = "https://github.com/s3bk/bullet.git" }
-bullet = { path = "../bullet" }
+bullet = { git = "https://gitlab.com/sebk/bullet.git" }
+#bullet = { path = "../bullet" }
 bincode = "*"
 chrono = "*"
 unicode-segmentation = "*"
