--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 [dependencies]
 irc = "0.12.5"
 futures = "0.1.25"
-hyper = "0.12.25"
-hyper-tls = "0.3.2"
+hyper = "0.12"
+hyper-rustls = "0.17"
 serde_derive = "1.0.89"
 serde_json = "1.0.39"
 serde = "1.0.89"
